<resources xmlns:android=" http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">鑫亚在线</string>
    <string name="action_settings">设置</string>
    <string name="text_version_code">当前版本 v<xliff:g>%1$s</xliff:g></string>
    <string name="button_text_yes">好的</string>
    <string name="text_ensure">确定</string>
    <string name="button_text_no">取消</string>
    <string name="button_text_tips">提示</string>
    <string name="btn_txt_no">否</string>
    <string name="btn_txt_yes">是</string>
    <string name="hyxw_1"> 2013年10月07日上午，湖南省委副书记、省长杜家毫在上海市调研正在火热进行的湘品入沪大联展活动。他强调，要牢固树立质量为本、市场为先、品牌为重的意识，把湖南农业产业优势与上海的市场优势有机结合起来，真正让湘品在沪生根、开花、结果，促进湖南现代农业加快发展。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;省长当起了推销员，热赞中粮旗下“中茶·黑茶园”牌安化黑茶
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;根据省政府的部署，从今年9月25日起，我省组织粮油、畜禽、茶叶、水果等近300个湖南名优特色产品，在上海市联华超市40家大卖场和良友集团30家便利店设立湘品入沪专区，进行集中展示销售。当杜省长走进百联中环世纪联华超市，来到中粮集团旗下“中茶·黑茶园”牌安化黑茶堆头时，兴致高昂义务做起了“安化黑茶的推销员”。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;杜省长向上海市副市长周波介绍到：“安化黑茶是个好东西，有降低血脂的功效，多喝会对身体有益。”同时杜省长还对“中茶·黑茶园”牌安化黑茶掌舵手熊嘉女士说：“中粮集团是个负责任的企业，要好好做好安化黑茶！”并回忆当年在黑龙江初次接触安化黑茶的情景，说最开始接触黑茶感觉饮用不方便而且价格便宜，这几年安化黑茶产品研发进步很快，还要继续增加方便饮用的好产品。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;下午，杜省长与湘沪两地商务、粮食部门负责人及企业家代表座谈，探讨进一步加强两地农副产品产销对接。一方面杜省长对上海市委、市政府和相关部门及社会各界的大力支持；另一方面要求湖南省各有关部门要认真总结经验，加快出台湘品入沪相关扶持政策，帮助企业更好地培育和开拓上海市场，变展销为常销，让更多上海市民认可和接受湖南优质农副产品。</string>
    <string name="hyxw_2">党的十八大描绘了全面建成小康社会的壮丽前景，无论从保障供给还是从扩大内需、无论从经济总量增长还是从人均收入增加，无论从经济发展还是从“五位一体”全局，都对农业农村的发展提出了越来越高的要求。当前,虽然农业比重在下降、农村人口在减少，但“三农”工作在国民经济中仍然是“重中之重”，全面建成小康社会，不仅要看经济总量的增加，更要看农村社会事业的发展、农民幸福指数的提升。 
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;作为一名农村社会事业工作者，必须认真学习、反复研读、深刻领会十八大精神，进一步增强大局意识、责任意识和机遇意识，着力提高理论水平、实践水平和管理水平，努力提升素质、能力和业绩，以更加饱满的热情、更加积极的心态、更加有力的举措，把十八大关于农村社会事业发展的有关精神转化为切实可行的工作措施和行之有效的工作方法，扎实推进农村社会事业工作，努力促进农村一二三产业大发展、农村社会事业大繁荣。
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;农村社会事业定义及性质
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;农村社会事业是面向农村全体居民，以提高其文化素质，改善其生活质量和生活环境为目标，为农村社会经济发展提供各种公共服务的服务体系，涉及农村的科技、教育、文化、医疗、卫生、体育、劳动就业、环境保护、社会保障、社会治安、突发公共事件预防与管理等诸多方面，是农民群众最关心、最直接、最现实的民生事业，是关系全体农民幸福的事业。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;推动农村社会事业发展，首先要突出五个“公”，即公共性，农村社会事业服务对象必须是农村全体成员；公平性，必须面向全体农村成员公平、均等化提供农村社会事业服务；公开性，必须按照公开透明的原则提供和分配农村社会事业服务；公正性，农村社会事业必须起到维系和引导发挥农村社会公平正义的作用；公益性，农村社会事业应由政府来主导和管理，通过营造良好的环境和氛围，积极引导社会力量参与农村社会事业建设。其次要统筹三个层面，一是在事关农民切身利益与福祉的农村社会事业上狠下功夫，包括劳动就业、子女上学、看病就医、计划生育、社会保障等，这关乎到整个国家的公平正义；二是在事关社会安全与稳定的农村社会事业上狠下功夫，包括社会治安、突发公共事件、自然灾害预防等，这关乎到整个国家的良好形象；三是在事关子孙后代长远利益与经济社会可持续发展的农村社会事业上狠下功夫，包括农民综合素质提高、科技应用与推广、资源保护与环境治理等，这关乎到整个国家的美好未来。
\n农村社会事业现状
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;近年来，虽然我国农村社会事业的各项工作取得了巨大突破，但存在的思路观念不明、发展水平不高、供给能力不足、解决办法不新、区域之间不均等问题，正日益成为农村社会事业进一步发展的障碍。具体表现为，政府在农村社会事业发展方面的职能定位尚未进一步明确和强化；中央财政支出结构中尚未充分体现出农村社会事业发展的重要性；在农村社会事业的各项投入中，各级政府分工与协调不到位；农村社会事业发展的地区差异以及农村与城市差距，没有引起社会足够重视；农村社会事业的发展水平与农村经济发展阶段不协调、不适应；农村社会事业相关单位的配套改革和制度建设与农村社会转型发展的需求不匹配；农业主管部门涉足农村社会事业工作不系统、不全面，缺少统一协调管理部门。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;笔者认为，在大力发展经济的同时，不可偏废社会事业发展，这是必须坚持的基本理念；在全面发展社会事业的大背景下，不可或缺农村社会事业，这是必须坚守的基本前提；在发展指标体系中充分涵盖社会、环境和公平等因素，这是必须坚定的基本条件。目前，我国总体上已进入以工补农、以城带乡的发展阶段，基本具备了加大力度支持农村社会事业加快发展的物质基础，农村社会事业工作能否做好，只是一个进一步明晰思路、转变观念的问题；农民对农村社会事业发展的需求不断增长，社会事业发展对经济、政治、文化、环境的作用能力日益加大，推进效应更加明显，农村社会事业工作能否做好，只是一个进一步强化措施、奋发有为的问题；农村各项改革加快推进，农村发展的体制机制不断创新，为农村社会事业发展提供了机制保障和强大动力，农村社会事业工作能否做好，只是一个进一步加大力度、把握时机的问题。
\n对农村社会事业工作的思考
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;做好农村社会事业工作，对提高全体农民的生活质量和综合素质，维护农村社会公平正义、推进和谐农村建设，以及全面建成小康社会、实现民族伟大复兴的“中国梦”意义重大。
　　\n一、提高社会事业一体化发展重要性的认识
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;农村农业基础设施薄弱，农业生产组织形式低下，尤其是农村社会事业发展滞后，仍然是当前农村发展中存在的突出矛盾和主要问题，是我国经济社会发展进程中的短板。这些年，国家虽然加强了对“三农”的支持力度，实行了工业反哺农业、城市支持农村和“多予少取放活”的方针，但国家公共财政向“三农”倾斜的力度、公共设施向“三农”延伸的深度、公共服务向“三农”覆盖的宽度依然不足，必须真正树立城乡平等对待、城乡统筹指导、城乡协调发展的理念，积极扭转城市优先发展战略，合理调整国民收入分配格局，将农村全面发展同城市一样纳入整个现代化建设进程，形成城乡经济社会发展一体化格局，切实解决社会事业工作中存在的城市和农村一条腿长、一条腿短的问题，让广大农民共享现代化建设和改革发展的伟大成果，共沐社会和谐和全面小康的阳光雨露。
　　\n二、加强农村社会事业发展的规划和指导
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;由于农村社会事业建设具有长期性、艰巨性、复杂性的特点，首先亟需开展对农村社会事业基础与现状的调查研究，彻底、系统掌握农村社会事业发展历史、现状、问题、原因、措施，发布《中国农村社会事业发展报告》，为政府决策提供详实、科学、准确的依据。其次亟需政府协调各部门的力量、统筹各方面的资源，制定、出台一个全面完整的促进我国农村社会事业发展的指导意见和发展规划，指导各地在尊重自然规律、经济规律和社会发展规律的前提下，区分轻重缓急，突出发展重点，避免农村社会事业发展的不到位和盲目性。
　　\n三、积极开展农村社会事业发展示范创建
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在整个社会事业发展还相对滞后的背景下，不同地区间农村社会事业发展的不平衡明显存在，应在经济发展相对较快的地方，开展示范创建活动，进一步探索农村社会事业发展规律，明确农村社会事业发展任务，确立农村社会事业发展目标，创新农村社会事业发展机制，优化农村社会事业发展环境，建立农村社会事业科学评价体系，快速培育出一批示范县市、示范乡镇，产生示范效应、发挥带动作用，引领我国农村社会事业全面健康发展。
　　\n四、加大资金投入和整合力度
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;首先要建立与农村社会事业发展相适应的财政保障机制，科学调整分配格局和投资结构，把建设重点转向农村，形成农村社会事业建设长期稳定的资金来源，加强农村社会事业领域部门间投资整合、计划衔接和信息沟通，统筹安排，形成合力，这是加快推进农村社会事业发展的方向。其次要鼓励全民共建农村社会事业，增强城市对农村的辐射带动作用，调动广大农民群众的积极性和创造性，把国家投资与农民投工投劳有机结合起来，创造平等竞争的环境，支持发展多种形式的专业合作经济组织，共同推进农村社会事业建设。第三要积极创新农村社会事业的资金投入机制，鼓励和引导民间资本投入农村社会事业建设，探索建立农村社会事业发展基金，组织发行农村社会事业彩票，开展农村社会事业的国际交流与合作，接受有关国际组织和民间组织对我国农村社会事业的援助。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;总之，农村社会事业相对于快速推进的工业化、日新月异的城镇化和风起云涌的信息化，已成为农业现代化进程中的短板，是制约“四化”同步推进的重要因素，补齐这块短板，刻不容缓，时不我待！</string>
    <string name="hyxw_3">据新华社新华视点微博报道，9月3日，中国东盟第十届博览会开幕式在南宁举行。李克强总理在演讲中说，我们愿与东盟签订农产品长期贸易协议，积极扩大从东盟进口在中国有市场有竞争力的商品，力争到2020年双边贸易额达到1万亿美元，今后8年新增双向投资1500亿美元。</string>
    <string name="hyxw_4"> 本网讯 9月2日，农业部在京举行农作物新品种选育与推广工作会议，农业部副部长余欣荣出席会议并讲话。他指出，要加快选育推广一批高产、优质、多抗、广适的突破性新品种，争取5年内完成一次品种更新换代，主要农作物品种产量水平在现有基础上提高5以上，品质显著改善，稳产性、适应性、抗逆性、安全性明显提高，适宜机械化品种比例较大幅度增加。 
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当前，我国品种选育和推广工作还不能适应发展现代农业和建设种业强国的要求，主要表现在：突破性品种不多、育种机制不适应、育种技术不适应、新品种权保护力度不够。对此，余欣荣强调，要从五个方面入手加快新品种的选育与推广：一是加快挖掘一批有用基因和优异资源，抓紧制定《农作物种质资源中长期发展规划》，加强种质资源搜集鉴定保护与利用工作，挖掘优异基因，创制优异育种材料，收集保护珍稀资源。二是加快突破性品种选育，要以市场为导向，立足自主创新，健全新型新品种选育体系，推动科企合作，搭建分子育种公共平台；大力支持企业开展商业化育种；大力支持科研单位开展常规作物育种。三是建立公正精准科学的品种审定体系。农业部将通过种子工程项目，全面提升品种试验能力，优化品种试验布局；强化测试体系基础设施建设；完善品种试验技术和标准；切实加强品种审定源头管理。四是加强农业植物新品种权保护，加强植物新品种测试中心、分中心建设；建立新品种权转让交易平台；强化品种权执法；五是进一步抓好新品种展示示范推广工作，粮棉油生产大县都要开展新品种展示示范工作，推进新品种引进示范场建设，农业部将进一步争取加大国家支持力度，在粮棉油生产大县建设新品种引进示范场，各地也要加强对示范场投入。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;会上，余欣荣还为湖南隆平高科、山东登海种业、北大荒垦丰种业、中种集团、合肥丰乐种业、北京奥瑞金种业、北京金色农华种业、辽宁东亚种业、河南秋乐种业、江苏大华种业十家“中国种业信用明星企业”授牌。</string>
    <string name="hyxw_5">安化之美，呈现山水地人，风姿各异。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;境内七十二峰，直插云天，雄奇险峻。其中“云台雾锁”、“熊耳浮青”、“芙岭朝云”、“笔架凌霄”诸峰，奇丽异常，百看不厌，令人爱恋不已。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;县内山川萦回，溪谷纵横，美丽的资水贯穿其中，四十八溪齐入资江，飞瀑匹练，清泉甘香。石门潭水深莫测，梯级坝碧波生烟。“洢水托兰”细波轻浪，柘溪库区气吞云雨。“泉塘沸玉”、“镜泉浴月”无不令人流连而神往。
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;安化土地肥沃，岩石奇特。柘溪冰渍岩，六亿年沧桑见证;思游石林群，八千载鬼斧劈成。将军岩、七星岩、烈马岩奇形异状;青龙洞、龙泉洞、石燕洞莫测幽深。鱼水洞有千古之迹，云霄洞藏世纪之珍。更有林海茫茫，一望无际，松涛阵阵，万木争荣。六步溪原始次森林天然绿色宝库，古木参天，名闻遐迩;川岩江新辟风景区显马帮运输古道，关山苍翠，远招游人。柘溪省级国家森林公园与雪峰湖相映成趣;芙蓉山、洞市等县级林场，共蓝天白云相处和谐。珍贵的银杏树，多资的白玉兰，娇羞的金叶含笑，高贵的金镶碧 玉竹，稀有珍贵植物美不胜收。安化茶叶更是采天地之灵气，聚日月之精华。黑砖、花砖、茯砖、天贡、生尖，远销边疆海外;松针、银毫、银币、金币、毛尖，声名正在鹊起。　
        \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;安化境内，历史遗痕不少，文化积淀弥珍。月圆里、边江村、青桑村等新石器文化遗址，见证梅山悠久历史;唐家观、奎溪坪、大溶溪等古朴自然村落，记录安化文明变迁。吴三桂毁剑埋发之处可寻，陶澍陵、印心石屋之迹犹在。木孔土塔为南方土塔之尊，世所罕见;联元塔、双星塔、文澜塔，形状各异，造形美观。永锡桥、大福桥、镇东桥结构奇伟，巧夺天工。东坪资江两桥、低坝电站，宛如长虹卧碧水，县城缀明珠。孔圣庙殿宇巍峨，培英堂古朴幽雅。岳峰殿、迥龙庵画栋雕梁，精工细琢：广化寺、真武寺柱大基宏，雄伟异常。众多的塔桥站寺庙，使得安化山河更加壮丽辉煌!
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;这里民风淳朴，性格粗犷，崇文尚武，勤劳实干，既善良厚道，又重礼守仁。梅王扶汉阳，披荆斩棘开梅山，勋业千秋;小淹人陶澍，居高位而思黎庶，政声显赫;罗绕典、黄方舟朝廷命官，封疆守土，名标青史;黄自元、黄德濂榜眼翰林，书法文采闪亮儒林;今天，有许多供职在中央和地方的党、政、军、文化、科技界的优秀儿女，其中为部级领导、军级干部、院士、学者的遍及全国，为国家和人民作出了巨大的贡献，立下了卓著的功勋。同时，安化又为世界羽毛球冠军之摇篮：唐九红、龚智超、龚睿娜、黄穗、陈林、田卿等世界冠军，都从这里起飞。安化由此声名远播，人人称道“安化现象”。更有各行各业之劳模和各个历史时期的英烈，在安化这方热土上挥汗洒血，谱写春秋。
       \n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;安化，安化，归安德化，前人之愿遂矣。安于斯，化于斯，昌盛可期!</string>
    <string name="hyxw_6">人类发现和利用茶叶源于中国，据记载，人类最初利用的是茶叶的解毒功能。数千年间，先人最早是嚼吃茶叶鲜叶，接下来大致经历了煮鲜叶汤、煮干茶汤、点茶、泡茶，直到如今出现各式各样的冲泡方法。人类对茶叶的利用也大致经历了药用、食用、饮用三个大的阶段。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;我们中国人逐步形成对茶的饮用习惯，以及发展到喜爱甚至痴迷，在于了解茶叶是一种健康性饮品开始，逐步上升到了认同它是一种精神性和文化性的饮品。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;但是，当我们回归事物的本质和基础，茶叶如今带给饮用者的感受和作用可以归纳为5个字：色、香、味、形、效。这5种感受是我们直接能够感知到的（身体残疾者除外）。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;“色”和“形”是我们的眼睛看到的。干茶的颜色及其茶汤的颜色、干茶的形状及其在水中展开的形状带给我们的是视觉感受，茶叶的“色”和“状”不仅可以用来区分茶叶的类别和品质档次，又能带给我们美好的视觉享受。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;“香”是我们鼻子闻到的，闻茶香，闻的是干茶的香、冲泡以后的叶底香及其茶汤香。“味”是我们口腔品尝到的，直接的是入口时的味道，另外还有喝了茶汤的回味。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;人类利用茶叶的核心基础和主线是茶叶对人体的健康功效。现代科学技术已经在茶叶中找到了超过500种的物质，正是这些奇妙的物质以及他们的奇妙组合，茶叶给人类带来了健康。但是，如果说茶叶的“色、香、味、形”是我们的直接感受的话，那么茶叶的“效”却不是直接的、不是立竿见影的，需要积累。也就是说，只有当我们长期饮茶，茶叶对我们人体的健康功效才能够显现出来。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;消费者喝茶的最基本需要，就是茶叶的“色、香、味、形、效”，而这其实都是茶叶的物质基础。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;作为茶叶的生产者和经营者，我们要念好这个“五字经”。我们应该尊重茶叶的本真性，也就是茶叶的真色、真香、真味、真形、真效，尤其是对于传统中国茶，那些在茶叶生产中使用化学添加剂，以改变茶叶的“色、香、味、形、效”的做法是绝对不能允许的。同时，我们还应该帮助消费者建立正确的茶叶品鉴取向，从而实现茶叶生产和消费的良性循环。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;而现实中的有些情况应该引起我们的注意和警惕。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;一方面，少数茶叶经营者误导消费者，造成了消费者对茶叶品鉴的错误和畸形取向，另一方面，少数生产者又不惜手段去迎合这些不正确的取向。比如现在出现的“芽头茶热”。还有个别茶叶生产者在茶叶中添加化学色素、化学香精，在制茶过程中添加白糖等等，需要我们的政府职能部门加强监管和处罚。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;更为危险的是中国茶叶的饮用安全性问题。茶叶本是健康之物，如果茶叶中出现了超标的稀土、重金属和农药残留等危害人体健康的物质，我们的消费者会受到什么打击？中国的茶产业会是什么后果？
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;最后，茶叶的“专业消费者”挂在嘴边的所谓“茶气”、“茶韵”等等，我们的普通消费者恐怕很难感知和享受得到。</string>
    <string name="hyxw_7">　《安化黑茶故事绘》由国家一级作家、湖南省文史馆馆员廖静仁编著，刘新安任总监制，中华图书出版社出版。《安化黑茶故事绘》作为安化黑茶文化唯一的民间故事读本，目的是还原安化黑茶的由来与制作及街坊民间与此有关的生动传说，溯源安化悠久的历史文脉，为消费者在品茗论道时提供几许风雅的浪漫元素。
　　\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;全书共分五个部分，暨《茶亭茶桥篇》、《茶山茶园篇》、《茶镇茶市篇》、《茶行茶房篇》、《茶事茶趣篇》等，编撰者皆亲历其间，或寻迹于山水或探访于街巷;既以史学之严谨考据于典籍，又以传奇之想象志异于乡野。是一本集可读性、趣味性和知识性的好书。</string>
    <string name="hyxw_8">谈安化黑茶言必金花。有金花是必须，反之，则不合品质。事实上如此吗？非也，在以前安化黑茶除了茯砖茶外，其他如黑砖茶，花卷茶，百两茶，千两茶，天尖茶，贡尖茶等都是没有金花的。可现在，随着科技的发展，金花几个小时可以生成。只是，此金花非以往的“金花”。以前的金花是自然岁月的催化而生成的，需要漫长的岁月。五年，十年不等。而，如今的“金花”说白了。是采用了对饮用者身体有害的方式形成的。从一开始拿金花作噱头，而忽略了中国人的追求财富不择手段的现状。为了牟利，很多黑心的茶人不顾真正的“金花”是需要十数年的自然岁月催化而成，采用非正常的手段人工发金花。毒害茶友。所以，呼吁茶友正确的对待安化黑茶中的“金花”静心等待岁月的催化。安化黑茶新茶购买一般要等上3年--5年口感才会醇厚。</string>
    <string name="qyjj_1">湖南鑫亚农业发展有限公司</string>
    <string name="qyjj_2">臻于至善 农业兴邦</string>
    <string name="qyjj_3">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;湖南鑫亚农业发展有限公司创立于2013年，是一家集有机农产品种植、生产、销售以及现代化农业技术研究及农业产业化生态观光旅游为一体的现代综合型农业企业。公司以“臻于至善，农业兴邦”为神圣使命，以“发展农业产业，铸造国际品牌”为核心价值观，对内致力于研发创新，对外致力于国际合作，秉承“立足三农、开发三农、服务三农”的发展理念，发扬不畏艰难、勇于开拓的精神，不断追求国内领先、国际一流的目标，在发展有机、生态、健康产业，铸造民族产业国际品牌的道路上不懈努力。</string>
    <string name="qyjj_4">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;公司总部位于具有“社会主义新农村示范基地”之称的湖南省长沙市望城区光明村。在光明村，公司投资近3亿元人民币，修建占地336亩的中华黑茶文化博览园，为安化黑茶打造一个展示、交流、贸易的世界窗口。公司依托光明村黑茶博览园得天独厚的地理环境与地位优势，还将打造中国一流的销售精英培训基地，为民族健康产业的国际化源源不断的输送精英人才。</string>
    <string name="qyjj_5">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;公司以黑茶为主业,在安化云台山、小淹、太阳山培育茶园基地达3000余亩。凭借安化优质基地原料，传承传统黑茶工艺，推行标准化生产，实现安化黑茶的提档升级。同时，加快黑茶附属产业的研发，推进农业产业化进程，推动周边产业裙带发展，拉动相关产业链产值10亿元以上，为周边群众提供1000余名就业机会，相关产业链就业人数5万人以上，帮助百姓人均增收3000元，带领当地农民共同致富。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;未来，在湖南省各级职能部门的指导和支持下，湖南鑫亚将全面整合“三农”资源，服务三农，提高核心竞争力，力争三年做大做强企业，面向国内、国际两个市场，全体鑫亚人将向着更加远大的目标努力奋斗。    </string>
</resources>